# Mesh-Subdivisions

./: .gitignore  CMakeLists.txt  README.md
head/: obj_mesh.h  subdivision.h
head/subdivisions/: catmull.h  doosabin.h  doosabin2.h  loop.h
models/: test.txt
src/: main.cpp  obj_mesh.cpp  test.txt
src/subdivisions/: catmull.cpp  doosabin.cpp  doosabin2.cpp  loop.cpp
